project-manifests/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
    - port: 3001
