project-manifests/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: project-db
  ports:
    - port: 27017
