project-manifests/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: default
  labels:
    app: my-app
spec:
  type: ClusterIP
  selector:
    app: project-frontend
  ports:
    - protocol: TCP
      port: 3000               # Service port
      targetPort: 3000        # Target port on the pod
