project-manifests/nginx-ingress-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nginx-ingress  # Target the frontend pod
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0  # Allow traffic from any IP
      ports:
        - protocol: TCP
          port: 80  # Frontend service port
